responsive body overflow correct

--- a/projects/project_astrozone/css/responsive.css
+++ b/projects/project_astrozone/css/responsive.css
@@ -200,10 +200,7 @@
 }
 
 @media (max-width: 468px) {
-	* {
-		outline: var(--ol);
-	}
-	body {
+	html {
 		overflow-x: hidden;
 	}
 	.astro-gallery-section {
@@ -226,6 +223,10 @@
 		font-size: 2rem;
 	}
 
+	#curtain-options {
+		height: fit-content;
+	}
+
 	.header-icon-container {
 		width: 50px;
 		height: 50px;
@@ -243,6 +244,10 @@
 	.famous-people-wrapper {
 		width: 100%;
 		height: auto;
+	}
+
+	.famous-select-container {
+		width: fit-content;
 	}
 }
 
